# reddit-scraper-github-publisher

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: daily-collection.yml
config/: channels.json  community_sources.json  public_signal_sources.json  retail_feature_keywords.json  tradingview_sources.json  web_research_queries.json  youtube_keywords.json
daily-dumps/2026-06-22/: manifest.json  summary.json
daily-dumps/2026-06-23/: manifest.json  summary.json
daily-dumps/2026-06-24/: manifest.json  summary.json
daily-dumps/2026-06-28/: manifest.json  summary.json
daily-dumps/2026-06-29/: manifest.json  summary.json
daily-dumps/2026-06-30/: manifest.json  summary.json
daily-dumps/2026-07-01/: manifest.json  summary.json
daily-dumps/2026-07-02/: manifest.json  summary.json
daily-dumps/2026-07-03/: manifest.json  summary.json
daily-dumps/2026-07-04/: manifest.json  summary.json
manifests/: all_dumps.json
manual-research/: README.md  daily-research-prompt.md  output-template.jsonl  research-checklist.md  source-query-bank.json
marketing-keywords/: README.md  current.json  manifest.json
product-catalog/: CONTRIBUTING.md  current.json  manifest.json  retail-upcoming-features.json  retail-upcoming-features.md
schemas/: dump-manifest.schema.json  feature-catalog.schema.json  public-signal.schema.json
scripts/: install_daily_task.ps1
src/insights_publisher/: cli.py
tests/: test_publisher.py
tools/: export_marketing_keywords_markdown.py  seed_catalog.py  update_retail_features_20260701.py
(+60 files in other folders)
