[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-product-insights-publisher"
version = "1.0.0"
description = "Daily Reddit collection, privacy-safe packaging, and GitHub publication"
requires-python = ">=3.11"
dependencies = ["requests>=2.32", "praw>=7.8"]

[project.scripts]
insights-publisher = "insights_publisher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

